* Ticket #114: random world spawn. Added 'spawnWorldRandom' strategy
* Ticket #114: random named spawn. Added 'spawnNamedRandom' strategy
* added "spawnRegionRandom" strategy for spawning at a completely random location inside a worldGuard region
* Ticket #104: /sethome and bedHome don't play nice together
* lots of testing and fixes to dynmap integration (it works now!)

v1.5.5 - May 12, 2012
* bugfix (unreported) for MODE_HOME_NO_BED not working
* Ticket #96: home name is "null" message in /homeinvite
* Ticket #98: delete homes with ID
* Ticket #71: bug with singleGlobalHome home limits
* Ticket #51: dynmap integration added (largely untested, looking for testers
& feedback)

v1.5.4.1 - May 5, 2012
* bugfix for an NPE on teleport, reported in comments
* made safe teleporting default to ON, can be disabled in config

v1.5.4 - May 4, 2012
* converted build system over to maven (finally stood up my own nexus
respository required to host dependent artifacts that aren't maven enabled).
This simplifies the build process to git cloning the source and then just
running 'mvn install'. Easy!
* Ticket #95: added time string messages to cooldowns, ie: "32 minutes 25
seconds remaining"
* Ticket #94: safe teleport, now settable via "config.safeTeleport" option
* Ticket #92: bed home request. See new bedHome documentation available at:
http://dev.bukkit.org/server-mods/homespawnplus/pages/bed-homes/
* localized time strings
* Ticket #89: home cost multiplier

v1.5.3 - April 20, 2012
* Ticket #93: named homes not working
* startup delay resolved. Default 'EBEANS' storage just uses Bukkit ebeans. To
use Persitance Reimplemented (http://goo.gl/rtdDH) which enables live-reload
(among other benefits, check link), you can use PERSISTANCE_REIMPLEMENTED_EBEANS
storage engine, at the cost of a ~0.75 second delay at startup.
* Added startup warnings for anyone using Essentials or CommandBook that also
gives brief instructions for how to make those plugins play nice with HSP.