@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Sat Jun 30 22:35:46 PDT 2012
-build.number=493
+#Sat Jun 30 23:07:15 PDT 2012
+build.number=499
