@@ -77,7 +77,7 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>1.2.5-R1.1</version>
+      <version>1.2.5-R4.0</version>
     </dependency>
 
     <!-- WorldBorder -->
